Fix Select component styles borked on Safari. Needs webkit appearance none.

--- a/agnostic-css/src/components/select/select.css
+++ b/agnostic-css/src/components/select/select.css
@@ -2,6 +2,10 @@
 .select-base {
   display: block;
   width: 100%;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -webkit-appearance: none;
+  /* stylelint-disable-next-line property-no-vendor-prefix */
+  -moz-appearance: none;
   appearance: none;
 }
 
